added basic visual explanation of rcv vs fptp

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<div>
 			<svg id="viz">
 			</svg>
+		<p id="description">Voting systems</p>
+			<button id="next">Next</button>
 		</div>
 		<script src="index.js"></script>
 	</body>
