--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <!--Vinay Bhaip vb4ztv-->
+<meta charset="UTF-8">
 <html>
 <style>
 	@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
