working simulation + generalized round system

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<svg id="viz">
 			</svg>
 		<p id="description">Voting systems</p>
+			<button id="prev" disabled>Previous</button>
 			<button id="next">Next</button>
 		</div>
 		<script src="index.js"></script>
