--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	<body>
 		<div>
 			<svg id="viz">
+				<defs>
+					<linearGradient id="redbluegrad" x1="0%" y1="0%" x2="100%" y2="0%">
+						<stop offset="0%" style="stop-color:rgb(0,0,255);stop-opacity:1" />
+						<stop offset="100%" style="stop-color:rgb(255,0,0);stop-opacity:1" />
+					</linearGradient>
+			  </defs>
 			</svg>
 		<p id="description">Voting systems</p>
 			<button id="prev" >Previous</button>
