simulation buttons for second part

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 					</linearGradient>
 			  </defs>
 			</svg>
+			<br>
+			<button id="simfptp" >Simulate FPTP</button>
+			<button id="simranked">Simulate Ranked Choice</button>
+			<button id="reset">Reset Simulation</button>
 		<p id="description">Voting systems</p>
 			<button id="prev" >Previous</button>
 			<button id="next">Next</button>
