add left + right skew

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		<script src="https://d3js.org/d3-random.v2.min.js"></script>
 		<!--<script src="https://d3js.org/d3.v5.js"></script>-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js"></script>
+		<script src="https://unpkg.com/@stdlib/stdlib@0.0.91/dist/stdlib-flat.min.js"></script>
 	</head>
 	<body>
 		<div>
@@ -113,7 +114,9 @@
 			<select name="simchoice" id="simchoice">
 				<option value="gauss">Gaussian</option>
 				<option value="bimodgauss">Bimodal Gaussian</option>
-				<option value="flat">Flatline</option>
+				<option value="uniform">Uniform</option>
+				<option value="leftskew">Left Skew</option>
+				<option value="rightskew">Right Skew</option>
 			</select>
 			<br>
 		<p id="description">Voting systems</p>
