--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
 <style>
 	@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 
-	html {
+	body {
 		font-family: 'Roboto';
 		background: #f8f8ff;
+		margin: 0;
+	}
+
+	p{
+		font-size: 1.2vmax;
+		height: 2vmax;
+	}
+
+
+	#description {
+		width: 55vw;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: center;
+		margin-bottom: 4vw;
+	}
+
+	#nav {
+		width: 40vw;
+		margin-left: auto;
+		margin-right: auto;
+
+		display: flex;
+		justify-content: center;
+	}
+
+	#bottombar {
+		width: 80vw;
+		height: 8vw;
+		margin: 10vw;
+		padding: 0;
+
 	}
 
 
@@ -28,6 +60,7 @@
 		filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.2));
 		font-family: 'Roboto';
 		border-radius: 5px;
+		
 
 		border: 2px solid #A974D4;
 		color: #A974D4;
@@ -38,6 +71,8 @@
 		font-size: 1.2vw;
 
 		transition: 0.3s;
+		
+		margin: 0 2vw;
 	}
 
 	.navbutton:hover{
@@ -97,7 +132,7 @@
 		<script src="https://unpkg.com/@stdlib/stdlib@0.0.91/dist/stdlib-flat.min.js"></script>
 	</head>
 	<body>
-		<div>
+		<div style="margin: 0">
 			<svg id="viz">
 				<defs>
 					<linearGradient id="redbluegrad" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -118,10 +153,15 @@
 				<option value="leftskew">Left Skew</option>
 				<option value="rightskew">Right Skew</option>
 			</select>
-			<br>
-		<p id="description">Voting systems</p>
-			<button class="navbutton" id="prev" >Previous</button>
-			<button class="navbutton" id="next">Next</button>
+			<br/>
+			<div id="bottombar">
+				<p id="description">Voting systems</p>
+				<br/>
+				<div id="nav">
+					<button class="navbutton" id="prev" >Previous</button>
+					<button class="navbutton" id="next">Next</button>
+				<div />
+			</div>
 		</div>
 		<script src="index.js"></script>
 	</body>
