add open source tag bottom right

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		overflow: hidden;
 	}
 
+	#minitext {
+		position: absolute;
+		bottom: 0vh;
+		right: 1vh;
+		font-size: 0.8vw;
+
+	}
+
 	#simcontrol {
 		display: flex;
 		justify-content: center;
@@ -232,6 +240,8 @@
 		</div>
 		</br>
 		<p id="jumpahead">Been here before? Jump to the <a id="jumpaheadlink" href="javascript:;" onclick="jumpAhead()">simulation</a>.</p>
+
+		<p id="minitext"><a target="_blank" href="https://github.com/vbhaip/ranked-vote-vis">Open-source</a></p>
 
 		<script src="index.js"></script>
 	</body>
