more explanation in examples + better title

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 </style>
 	<head>
-		<title>Ranked Choice Vis</title>
+		<title>Ranked Choice Voting: A Better Democracy?</title>
 		<script src="https://d3js.org/d3-force.v2.min.js"></script>
 		<script src="https://d3js.org/d3-random.v2.min.js"></script>
 		<!--<script src="https://d3js.org/d3.v5.js"></script>-->
@@ -257,11 +257,11 @@
 			<div id="simchoicecontainer">
 				Distribution of voter ideologies:  
 				<select name="simchoice" id="simchoice">
-					<option value="gauss">Gaussian</option>
-					<option value="bimodgauss">Bimodal Gaussian</option>
+					<option value="gauss">Normal</option>
+					<option value="bimodgauss">Two Peaks</option>
 					<option value="uniform">Uniform</option>
-					<option value="leftskew">Left Skew</option>
-					<option value="rightskew">Right Skew</option>
+					<option value="leftskew">Lean Conservative</option>
+					<option value="rightskew">Lean Liberal</option>
 				</select>
 			</div>
 			<div id="simhelp">
