--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 </style>
 	<head>
-		<title>Ranked Choice Voting: A Better Democracy?</title>
+		<title>Ranked Choice Voting: A More Representative Democracy?</title>
 		<script src="https://d3js.org/d3-force.v2.min.js"></script>
 		<script src="https://d3js.org/d3-random.v2.min.js"></script>
 		<!--<script src="https://d3js.org/d3.v5.js"></script>-->
