add google analytics tag

--- a/index.html
+++ b/index.html
@@ -231,6 +231,15 @@
 		<!--<script src="https://d3js.org/d3.v5.js"></script>-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.5.0/d3.min.js"></script>
 		<script src="https://unpkg.com/@stdlib/stdlib@0.0.91/dist/stdlib-flat.min.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169278409-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-169278409-1');
+		</script>
 	</head>
 	<body>
 		<div style="margin: 0">
