--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 			</div>
 			<div id="examples">
 				Try me: 
-				<button class="examplebutton" id ="example1button"><img src="example1.png"> </img></button>
-				<button class="examplebutton" id ="example2button"><img src="example2.png"> </img></button>
-				<button class="examplebutton" id ="example3button"><img src="example3.png"> </img></button>
+				<button class="examplebutton" id ="example1button"><img src="images/example1.png"> </img></button>
+				<button class="examplebutton" id ="example2button"><img src="images/example2.png"> </img></button>
+				<button class="examplebutton" id ="example3button"><img src="images/example3.png"> </img></button>
 
 			</div>
 			<div id="simchoicecontainer">
